welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:1: error: '(' expected but identifier found.
def diff21(n:Int): Int = {if n>21 return 2*(n-21) else return 21-n} 
                             ^diff21:1: error: illegal start of simple expression
def diff21(n:Int): Int = {if n>21 return 2*(n-21) else return 21-n} 
                                                                  ^